--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ flask>=2.0.0
 flask-cors>=3.0.10 
 schedule>=1.1.0
 python-dateutil>=2.8.2
+werkzeug>=2.0.0
+gunicorn>=20.1.0
+pytz>=2022.1
+watchdog>=2.1.9
+psutil>=5.9.0
